--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,13 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet">
   <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.png">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.9/typicons.min.css" type="text/css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
   <title>Nestmetric</title>
 </head>
 
 <body>
-
   <div>
   </div>
   <div id="root"></div>
